fix: tests, schema.sql, authorization